@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: unixInit.test,v 1.1.2.8 1999/04/06 20:21:26 stanton Exp $
+# RCS: @(#) $Id: unixInit.test,v 1.1.2.9 1999/04/06 20:40:23 stanton Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -35,11 +35,20 @@ if {[catch {
 test unixInit-1.1 {TclpInitPlatform: ignore SIGPIPE} {unixOnly installedTcl} {
     set x {}
 
+    # Watch out for a race condition here.  If tcltest is too slow to start
+    # then we'll kill it before it has a chance to set up its signal handler.
+    
     set f [open "|[list $tcltest]" w+]
+    puts $f "puts hi"
+    flush $f
+    gets $f
     exec kill -PIPE [pid $f]
     lappend x [catch {close $f}]
 
     set f [open "|[list $tcltest]" w+]
+    puts $f "puts hi"
+    flush $f
+    gets $f
     exec kill [pid $f]
     lappend x [catch {close $f}]
 
